# ShallotT

./: .gitignore  COMPTE_RENDU_v1.0.8.md  COMPTE_RENDU_v1.0.9.md  COMPTE_RENDU_v1.1.3.md  COMPTE_RENDU_v1.1.4.md  GUIDE_INSTALLATION_EXTENSION.md  README.md  ShallotT.spec  build_exe.py  config.example.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  shallott.desktop  v1.0.8.md  version_info.txt
browser_extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/: manifest.json
extension-chrome/: manifest.json  rules.json
extension-chrome/src/: background.js  ocr_content.js  popup.html  popup.js
extension-chrome/src/lib/: tesseract.min.js
extension/src/: autodetect.js  background.js  popup.html  popup.js  translate_page.js
shallott/: __init__.py  app.py  config.py  hotkeys.py  ocr.py  overlay.py  translator.py  tray.py
src/: audio_capture.py  clipboard_monitor.py  config.py  doc_import.py  glossary.py  ocr.py  ocr_server.py  ollama_client.py  shortcuts.py  stt.py  translation_cache.py  tts.py  ui.py
tests/: test_config.py  test_hotkeys.py  test_translator.py
